--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.2.1",
     "react-helmet": "^6.1.0",
+    "react-icon": "^1.0.0",
     "react-icons": "^4.2.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
@@ -20,6 +21,7 @@
     "react-scripts": "^4.0.3",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.0",
     "validator": "^13.6.0",
     "web-vitals": "^1.0.1"
   },
